# openinterp-swebench-harness

./: .gitignore  EXPERIMENTAL_PLAN_paper_mega_v4_interchange.md  README.md  config.py  pyproject.toml  runner.py  verdict.py
agent/: __init__.py  loop.py  parser.py  prompts.py  tools.py
instrumentation/: __init__.py  capture.py  layerpatch.py  layertap.py
notebooks/: nb_adversarial_kappa_t_phase0.ipynb  nb_agent_probe_guard_eval.ipynb  nb_breakthrough_action_channel.ipynb  nb_breakthrough_confirm.ipynb  nb_commitment_lever.ipynb  nb_commitment_lever_output.ipynb  nb_cot_redirect_phase1.ipynb  nb_cot_redirect_phase2.ipynb  nb_cot_redirect_phase3.ipynb  nb_cot_resampling_intervention_phase0.ipynb  nb_exp_b_baseline.ipynb  nb_exp_b_c_combined_steering.ipynb  nb_inner_outer_phase1.ipynb  nb_kappa_t_scaleup_phase6c.ipynb  nb_paper2_v2_l11_phase1.ipynb  nb_paper2_v2_l11_pilot.ipynb  nb_paper4_modality_matters.ipynb  nb_paper_mega_interchange.ipynb  nb_paper_mega_v4_run_min_viable.ipynb  nb_silent_refusal_phase2a.ipynb  nb_silent_refusal_repro_check.ipynb  nb_six_diagnostics_demo.ipynb  nb_six_diagnostics_demo_executed.ipynb  nb_swebench_v0_smoke.ipynb  nb_swebench_v10_fg_rg_causality.ipynb  nb_swebench_v11_capability_locus.ipynb  nb_swebench_v11b_capability_locus_extension.ipynb  nb_swebench_v11c_cross_distribution.ipynb  nb_swebench_v11d_codeforces.ipynb  nb_swebench_v11e_multisite_cf.ipynb  nb_swebench_v12_persona_falsifier.ipynb  nb_swebench_v1_phase1.ipynb  nb_swebench_v2_phase2_analysis.ipynb  nb_swebench_v3_phase3_steering.ipynb  nb_swebench_v4_phase4_eval.ipynb  (+14 more)
(+454 files in other folders)
